tests/negative/gold/import_no_exit_test.gold
tests/negative/import_no_exit_test.toit:9:1: error: Failed to find import '.nonexisting'
import .nonexisting show ambiguous_unresolved
^~~~~~
tests/negative/import_no_exit_test.toit:9:9: note: Missing library file. Tried 'tests/negative/nonexisting.toit' and 'tests/negative/nonexisting/nonexisting.toit'
import .nonexisting show ambiguous_unresolved
        ^~~~~~~~~~~
tests/negative/import_no_exit_test.toit:10:1: error: Failed to find import '.nonexisting'
import .nonexisting show ambiguous_unresolved
^~~~~~
tests/negative/import_no_exit_test.toit:10:9: note: Missing library file. Tried 'tests/negative/nonexisting.toit' and 'tests/negative/nonexisting/nonexisting.toit'
import .nonexisting show ambiguous_unresolved
        ^~~~~~~~~~~
tests/negative/import_no_exit_cycle1.toit:5:1: error: Failed to find import '.no_exit_test'
import .no_exit_test
^~~~~~
tests/negative/import_no_exit_cycle1.toit:5:9: note: Missing library file. Tried 'tests/negative/no_exit_test.toit' and 'tests/negative/no_exit_test/no_exit_test.toit'
import .no_exit_test
        ^~~~~~~~~~~~
tests/negative/import_no_exit_test.toit:23:29: error: Prefix clashes with toplevel declaration 'toplevel'
import .import_no_exit_a as toplevel
                            ^~~~~~~~
tests/negative/import_no_exit_test.toit:35:1: error: Toplevel declaration 'toplevel'
toplevel := null
^~~~~~~~
tests/negative/import_no_exit_test.toit:24:29: error: Prefix clashes with toplevel declaration 'toplevel2'
import .import_no_exit_a as toplevel2
                            ^~~~~~~~~
tests/negative/import_no_exit_test.toit:36:1: error: Toplevel declaration 'toplevel2'
toplevel2: return null
^~~~~~~~~
tests/negative/import_no_exit_test.toit:25:29: error: Prefix clashes with toplevel declaration 'Toplevel3'
import .import_no_exit_a as Toplevel3
                            ^~~~~~~~~
tests/negative/import_no_exit_test.toit:37:7: error: Toplevel declaration 'Toplevel3'
class Toplevel3:
      ^~~~~~~~~
tests/negative/import_no_exit_test.toit:6:31: error: Ambiguous 'show' import for 'ambiguous'
import .import_no_exit_b show ambiguous
                              ^~~~~~~~~
tests/negative/import_no_exit_test.toit:5:31: note: First show of identifier 'ambiguous'
import .import_no_exit_a show ambiguous
                              ^~~~~~~~~
tests/negative/import_no_exit_test.toit:8:31: error: Ambiguous 'show' import for 'ambiguous_unresolved'
import .import_no_exit_b show ambiguous_unresolved
                              ^~~~~~~~~~~~~~~~~~~~
tests/negative/import_no_exit_test.toit:7:31: note: First show of identifier 'ambiguous_unresolved'
import .import_no_exit_a show ambiguous_unresolved
                              ^~~~~~~~~~~~~~~~~~~~
tests/negative/import_no_exit_test.toit:9:26: error: Ambiguous 'show' import for 'ambiguous_unresolved'
import .nonexisting show ambiguous_unresolved
                         ^~~~~~~~~~~~~~~~~~~~
tests/negative/import_no_exit_test.toit:7:31: note: First show of identifier 'ambiguous_unresolved'
import .import_no_exit_a show ambiguous_unresolved
                              ^~~~~~~~~~~~~~~~~~~~
tests/negative/import_no_exit_test.toit:10:26: error: Ambiguous 'show' import for 'ambiguous_unresolved'
import .nonexisting show ambiguous_unresolved
                         ^~~~~~~~~~~~~~~~~~~~
tests/negative/import_no_exit_test.toit:7:31: note: First show of identifier 'ambiguous_unresolved'
import .import_no_exit_a show ambiguous_unresolved
                              ^~~~~~~~~~~~~~~~~~~~
tests/negative/import_no_exit_test.toit:12:31: error: Name clash with toplevel declaration 'toplevel'
import .import_no_exit_a show toplevel
                              ^~~~~~~~
tests/negative/import_no_exit_test.toit:35:1: note: Toplevel declaration of 'toplevel'
toplevel := null
^~~~~~~~
tests/negative/import_no_exit_test.toit:13:31: error: Name clash with toplevel declaration 'toplevel2'
import .import_no_exit_a show toplevel2
                              ^~~~~~~~~
tests/negative/import_no_exit_test.toit:36:1: note: Toplevel declaration of 'toplevel2'
toplevel2: return null
^~~~~~~~~
tests/negative/import_no_exit_test.toit:14:31: error: Name clash with toplevel declaration 'Toplevel3'
import .import_no_exit_a show Toplevel3
                              ^~~~~~~~~
tests/negative/import_no_exit_test.toit:37:7: note: Toplevel declaration of 'Toplevel3'
class Toplevel3:
      ^~~~~~~~~
tests/negative/import_no_exit_test.toit:18:31: error: Name clash with prefix 'prefix'
import .import_no_exit_b show prefix
                              ^~~~~~
tests/negative/import_no_exit_test.toit:17:29: error: Definition of prefix 'prefix'
import .import_no_exit_a as prefix
                            ^~~~~~
tests/negative/import_no_exit_test.toit:7:31: error: Unresolved show 'ambiguous_unresolved'
import .import_no_exit_a show ambiguous_unresolved
                              ^~~~~~~~~~~~~~~~~~~~
tests/negative/import_no_exit_test.toit:12:31: error: Unresolved show 'toplevel'
import .import_no_exit_a show toplevel
                              ^~~~~~~~
tests/negative/import_no_exit_test.toit:13:31: error: Unresolved show 'toplevel2'
import .import_no_exit_a show toplevel2
                              ^~~~~~~~~
tests/negative/import_no_exit_test.toit:14:31: error: Unresolved show 'Toplevel3'
import .import_no_exit_a show Toplevel3
                              ^~~~~~~~~
tests/negative/import_no_exit_test.toit:18:31: error: Unresolved show 'prefix'
import .import_no_exit_b show prefix
                              ^~~~~~
tests/negative/import_no_exit_test.toit:29:8: error: Can't export prefix 'pre'
export pre
       ^~~
tests/negative/import_no_exit_test.toit:30:8: error: Ambiguous export of 'ambiguous_cd'
export ambiguous_cd
       ^~~~~~~~~~~~
tests/negative/import_no_exit_c.toit:5:1: error: Definition of 'ambiguous_cd'
ambiguous_cd := 42
^~~~~~~~~~~~
tests/negative/import_no_exit_d.toit:5:1: error: Definition of 'ambiguous_cd'
ambiguous_cd := 499
^~~~~~~~~~~~
tests/negative/import_no_exit_test.toit:31:8: error: Unresolved export 'unresolved'
export unresolved
       ^~~~~~~~~~
tests/negative/import_no_exit_test.toit:32:8: error: Unresolved export 'bad'
export bad
       ^~~
tests/negative/import_no_exit_test.toit:40:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/import_no_exit_test.toit:41:5: error: Class 'int' does not have any method 'foo'
  1.foo
    ^~~
Compilation failed.
